# mlir-learning

./: CMakeLists.txt  README.md  compile_commands.json  ctlz.mlir
.cache/clangd/index/: AffineFullUnroll.cpp.D5DC9E6BAEFFEDF8.idx  AffineFullUnroll.h.21CA16D4CF3ABD1C.idx  tutorial-opt.cpp.F4B718B05CE9AD78.idx
ch01/.cache/clangd/index/: AST.cpp.417496E8A55BFE9A.idx  AST.h.0DD5B715BDB618B6.idx  Lexer.h.D22FCEFABC97087E.idx  Parser.h.6096F005DF43A3B4.idx  toyc.cpp.0C85AEF6D66082A9.idx
ch01/include/toy/: AST.h  Parser.h
ch01/parser/: AST.cpp
learn_02/: .lit_test_times.txt  ctlz.mlir  ctlz_runner.mlir  lit.cfg.py  test.mlir
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.cpp.inc  PolyDialect.h.inc  PolyDialect.td  PolyOps.cpp.inc  PolyOps.h  PolyOps.h.inc  PolyOps.td  PolyTypes.cpp.inc  PolyTypes.h  PolyTypes.h.inc
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnrollPatternRewrite.cpp  CMakeLists.txt  Passes.h.inc
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  Passes.h.inc
mlir-toy/: compile_commands.json
mlir-toy/ch01/: CMakeLists.txt  toyc.cpp
mlir-toy/ch01/.cache/clangd/index/: AST.cpp.FAF0E93FC9B0AED7.idx  AST.h.4AF0C25680CD778C.idx  Lexer.h.8E5561A7949424DB.idx  Parser.h.2EE956A4ADB7C870.idx  toyc.cpp.9E25AA91812EEA8F.idx
mlir-toy/ch01/include/toy/: Lexer.h
tests/: .lit_test_times.txt  CMakeLists.txt  affine_loop_unroll.mlir  lit.cfg.py  lit.site.cfg.py.in  mul_to_add.mlir  poly_syntax.mlir  res.mlir  test.mlir
tests/Output/: affine_loop_unroll.mlir.tmp
tools/: CMakeLists.txt  tutorial-opt.cpp
tools/.cache/clangd/index/: tutorial-opt.cpp.F4B718B05CE9AD78.idx
